--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ If you have found me on this page, i'm appreciate it.
 This site is still on a progress.
 I created this site on 02/02/2023.
 This site is still need some update like themes, script or anything code for making a real website.
-Anyway thanks for visiting this site, at one time this site will be finished by my own hands, because created this site is by myself.
+Anyway thanks for visiting this site, at one time this site will be finished by my own hand as soon as possible.
 
 
 I will be added some changelog what i just added for this site.
