--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 Hello everyone, i'm Xneaxy (24) from Yogyakarta, Indonesia.
 If you have found me on this page, i'm appreciate it.
 This site is still on a progress.
