--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+<body>
 Hello everyone, i'm Xneaxy (24) from Yogyakarta, Indonesia.
 If you have found me on this page, i'm appreciate it.
 This site is still on a progress.
@@ -8,3 +10,5 @@ Anyway thanks for visiting this site, at one time this site will be finished by 
 
 
 I will be added some changelog what i just added for this site.
+</body>
+</html>
