--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-Hello everyone, i'm Xneaxy (24) from Yogyakarta, Indonesia.
+  <p>Hello everyone, i'm Xneaxy (24) from Yogyakarta, Indonesia.</p>
 If you have found me on this page, i'm appreciate it.
 This site is still on a progress.
 I created this site on 02/02/2023.
