--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
   <p>Hello everyone, i'm Xneaxy (24) from Yogyakarta, Indonesia.</p>
-If you have found me on this page, i'm appreciate it.
-This site is still on a progress.
+<p>If you have found me on this page, i'm appreciate it.</p>
+<p>This site is still on a progress.</p>
 I created this site on 02/02/2023.
 This site is still need some update like themes, script or anything code for making a real website.
 Anyway thanks for visiting this site, at one time this site will be finished by my own hand as soon as possible.
@@ -11,4 +11,3 @@ Anyway thanks for visiting this site, at one time this site will be finished by 
 
 I will be added some changelog what i just added for this site.
 </body>
-</html>
