--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <!-- Introduction about this site-->
   <p>Hello everyone, i'm Xneaxy (24) from Yogyakarta, Indonesia.</p>
 <p>If you have found me on this page, i'm appreciate it.</p>
 <p>This site is still on a progress.</p>
@@ -10,4 +11,5 @@ Anyway thanks for visiting this site, at one time this site will be finished by 
 
 
 I will be added some changelog what i just added for this site.
+  <!-- Changelog Updates about this site-->
 </body>
