--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>xneaxy warehouse</title>
+</head>
 <body>
-  <h1>Holla</h1>
+  <h1>xneaxy-warehouse</h1>
   <!-- Introduction about this site-->
-  <p>Hello everyone, i'm Xneaxy (24) from Yogyakarta, Indonesia.</p>
-<p>If you have found me on this page, i'm appreciate it.</p>
-<p>This site is still on a progress.</p>
-I created this site on 02/02/2023.
-This site is still need some update like themes, script or anything code for making a real website.
-Anyway thanks for visiting this site, at one time this site will be finished by my own hand as soon as possible.
+Hello everyone, i'm <b>xneaxy</b> (24) from <i>Yogyakarta, Indonesia.</i><br>
+If you have found me on this page, i'm appreciate it.<br>
 
+<p>This site is still on a progress and made in <b>02/02/2023</b>, and it will be needed some update like themes, script or anything code for making a real website, Anyway thanks for visiting this site.<br> 
+At one time this site will be finished by my own hand as soon as possible.<br>
 
-I will be added some changelog what i just added for this site.
+<p>I will be added some changelog what i just added for this site.</p>
   <!-- Changelog Updates about this site-->
 </body>
